<resources>
    <string name="app_name">DJ</string>
    <string name="action_settings">Settings</string>

    <string name="format_splash_skip">跳过(%d秒)</string>

    <string name="provider_authorities">com.doojaa.base.fileprovider</string>

    <string name="tab_text_recommend">菜单2</string>
    <string name="tab_text_bookcity">菜单3</string>
    <string name="tab_text_bookshelf">菜单1</string>
    <string name="tab_text_me">我的</string>

    <string name="title_my_bookshelf">我的书架</string>
    <string name="title_my_bookshelf_edit">编辑书架</string>
    <string name="title_book_city">书城</string>
    <string name="title_book_detail">书籍详情</string>
    <string name="title_book_ALL_COMMENT">全部评论</string>
    <string name="title_seacher">搜索</string>

    <string name="app_channel">channel</string>
    <string name="wechat_startup">正在启动微信..</string>

    <string name="wechat_not_install">您未安装微信或微信版本过低！</string>
    <string name="wechat_login">微信一键登录</string>
    <string name="wechat_pay">微信支付</string>
    <string name="ali_pay">支付宝支付</string>
    <string name="money_pay">账户余额支付</string>

    <string name="request_authorize_ok">授权成功</string>
    <string name="request_authorize_cancel">授权取消</string>
    <string name="request_authorize_refused">授权拒绝</string>
    <string name="request_authorize_failed">授权失败</string>

    <string name="request_ok">请求成功</string>
    <string name="request_cancel">请求取消</string>
    <string name="request_refused">请求拒绝</string>
    <string name="request_failed">请求失败</string>

    <string name="request_download_ok">下载成功</string>
    <string name="request_download_cancel">下载取消</string>
    <string name="request_download_refused">下载拒绝</string>
    <string name="request_download_failed">下载失败</string>

    <string name="msg_two_back_exit">再按一次退出</string>
    <string name="msg_signin">签到</string>
    <string name="msg_share_prize">邀请有奖</string>
    <string name="msg_del">删除</string>
    <string name="msg_del_number">删除（%d）</string>
    <string name="msg_cancel">取消</string>
    <string name="msg_finish">完成</string>
    <string name="msg_ok">确定</string>
    <string name="msg_check_all">全选</string>
    <string name="msg_money_yuan">%s元</string>

    <string name="msg_loading_login">正在登录..</string>
    <string name="msg_loading_signin">正在签到..</string>
    <string name="msg_loading_userinfo">正在加载用户信息</string>
    <string name="msg_loading_syn">正在同步书架</string>
    <string name="msg_not_login_to_login">&lt;font color=#ff7800>请登录！&lt;/font></string>
    <string name="msg_no_login_1">还未登录哦</string>
    <string name="msg_login_issue">&lt;font color=#9999999>登录有问题？&lt;u>联系客服&lt;/u>&lt;/font></string>
    <string name="msg_del_tip">删除提示</string>
    <string name="msg_del_thisbook">确定要删除所选的这%d本书吗？</string>
    <string name="msg_no_select_book">请选择要删除的书</string>
    <string name="msg_signin_ok">签到成功！恭喜您获得</string>
    <string name="format_dialog_signin_instruction" formatted="false">每天签到随机奖励%s元\n累计签到%s天，有特别奖励，已累计&lt;font color=#f43530>%s&lt;/font>天</string>
    <string name="format_dialog_signin_5day">累计签到%s天</string>
    <string name="msg_signin_5day_tip">分享并签到，可以拿翻倍奖励\n您也可以使用普通签到</string>
    <string name="msg_buy_vip_hit" formatted="false">您的余额:&lt;font color=#f43530>%s元&lt;/font>，还需要支付:&lt;font color=#f43530>%s元&lt;/font></string>
    <string name="msg_signin_share_gif">分享并签到(双倍奖励)</string>
    <string name="msg_signin_normal">放弃，普通签到</string>
    <string name="msg_seach_history">搜索历史</string>
    <string name="msg_download_manage">下载管理</string>
    <string name="msg_download_tip">下载提示</string>
    <string name="msg_download_all_text">全文本下载</string>
    <string name="msg_download_all_text_1">下载全文</string>
    <string name="msg_download_current_text">从当前章节下载</string>
    <string name="msg_download_issue">&lt;font color=#666666 size=26>不能下载？&lt;/font>&lt;font color=#0084D8>&lt;u>联系客服&lt;/u>&lt;/font></string>


    <string name="msg_money_can_buy_vip">钱可以用来买VIP，也可以提现哦！</string>
    <string name="msg_buy_vip">购买VIP</string>
    <string name="msg_get_money">我要提现</string>
    <string name="msg_look_detail">&lt;font color=#888888>&lt;u>查看明细&lt;/u>&lt;/font></string>

    <string name="msg_paihang">排行榜</string>
    <string name="msg_girl">女生</string>
    <string name="msg_boy">男生</string>
    <string name="msg_school">VIP专享</string>
    <string name="msg_girl_category">女生分类</string>
    <string name="msg_boy_category">男生分类</string>
    <string name="msg_school_category">校园分类</string>
    <string name="msg_hot_recommend">热门推荐</string>
    <string name="msg_wanjie_jx">完结精选</string>
    <string name="msg_lianzai_jx">连载精选</string>
    <string name="msg_jinri_gz">今日关注</string>
    <string name="msg_seemore">+查看更多</string>
    <string name="msg_inputbooknameorauthor">输入小说名或作者</string>
    <string name="msg_clear_history">清空搜索历史</string>
    <string name="msg_search_nothing">很抱歉，未能搜索到 &lt;font color=#ff0000>%s&lt;/font> 相关内容</string>
    <string name="msg_seach_result_count">共搜索到&lt;font color=#ff0000>%d&lt;/font>条结果</string>
    <string name="msg_more_author_count">该作者共有&lt;font color=#ff0000>%d&lt;/font>个作品</string>
    <string name="msg_add_library">加入书架</string>
    <string name="msg_del_library">移除书架</string>
    <string name="msg_start_read">开始阅读</string>

    <string name="title_activity_reader">ReaderActivity</string>

    <string name="msg_zuixin">最新</string>
    <string name="msg_wanjie">完结</string>
    <string name="msg_zuire">最热</string>
    <string name="msg_reload">重新加载</string>

    <string name="msg_last_update_time">最后更新时间：%s</string>
    <string name="msg_last_chapter_html">&lt;font color=#ff7800>[最新章节] &lt;/font>&lt;font color=#666666>%s&lt;/font></string>

    <string name="msg_check_catalog">查看目录 (%d章)</string>
    <string name="msg_similar">看过这本书的人还在看</string>
    <string name="msg_change">换一换</string>
    <string name="msg_author_other_book">作者的其他作品</string>
    <string name="msg_add_moer">+更多</string>
    <string name="msg_book_information">图书相关信息</string>
    <string name="msg_one_key_download">一键下载</string>
    <string name="msg_one_key_pause_all">暂停全部</string>

    <string name="msg_download_btn_nostart">开始</string>
    <string name="msg_download_btn_watting">等待</string>
    <string name="msg_download_btn_pauseed">继续</string>
    <string name="msg_download_btn_downloading">暂停</string>
    <string name="msg_download_btn_finish">完成</string>

    <string name="msg_download_status_nostart">未开始</string>
    <string name="msg_download_status_watting">等待中</string>
    <string name="msg_download_status_pauseed">已暂停</string>
    <string name="msg_download_status_downloading">正在缓存</string>
    <string name="msg_download_status_finish">已完成</string>


    <string name="format_dialog_sign_text1" formatted="false">每累计签到&lt;font color=#f43530>%d&lt;/font>天，增加&lt;font color=#f43530>%d&lt;/font>天VIP</string>
    <string name="format_dialog_download_issue">&lt;font color=#666666>不能下载？&lt;/font>&lt;font color=#0084D8>&lt;u>联系客服&lt;/u>&lt;/font></string>

    <string name="format_dialog_reward_hit" formatted="false">打赏%s元，需要支付&lt;font color=#f43530>%s&lt;/font>元</string>

    <string name="format_detail_info_content" formatted="false">本书数字版权由“%s”提供并由其授权“快看小说”联合销售，若书中含有不良信息，请书友告知客服！</string>

    <string-array name="web_scheme_url">
        <item>tel</item>
        <item>mqqwpa</item>
        <item>mqqopensdkapi</item>
        <item>weixin</item>
        <item>mqqapi</item>
        <item>itaobao</item>
        <item>taobao</item>
        <item>itmall</item>
        <item>tmall</item>
    </string-array>

    <string name="coupon_1_question">1、什么是“书券”？</string>
    <string name="coupon_1_answer">“书券”是快看小说赠送的虚拟货币，与“书币”价值相等。</string>
    <string name="coupon_2_question">2、如何获得“书券”？</string>
    <string name="coupon_2_answer">除“充值获赠书券”外，每日签到、加入书架、分享好友、阅读小说也可以获得书券。</string>
    <string name="coupon_3_question">3、“书券”如何使用？</string>
    <string name="coupon_3_answer">书券在自动解锁章节时，自动使用，有效期近的优先。书券使用完毕后，才会使用书币。</string>
    <string name="coupon_help">如有问题请至“建议反馈”或“联系客服”</string>

    <string name="no_net">当前网络不可用，请检查网络设置</string>
    <string name="covert_code_rule_3">1. 一个兑换码只能兑换一次\n2. 一个账号每天只能兑换一次\n3. 兑换成功后，可以在我的页面查看等级标志</string>

    <!--异常提示-->
    <string name="books_network_error">网络异常</string>

    <!--阅读页面-->
    <string name="book_read_mode_default">仿真翻页</string>
    <string name="book_read_mode_cover">平滑翻页</string>

    <!--推广页面-->
    <string name="ads_invite_code">我的邀请码：%s</string>

    <string name="ads_menu_day_task">每日任务</string>
    <string name="ads_menu_day_text">每日点击广告，当日书卷次数&lt;font color=#23B382>+%s&lt;/font>，次数不累计</string>
    <string name="ads_menu_ads_task">推广任务</string>
    <string name="ads_menu_fuli_task">福利任务</string>
    <string name="ads_menu_ads_text">推广给好友成功下载APP并打开或注册时好友填写你的邀请码，可以永久增加每日可使用书币。</string>
    <string name="ads_add_summary">推广&lt;font color=#23B382>%s&lt;/font>人 — 每日可使用书币&lt;font color=#23B382>+%s&lt;/font></string>

    <string name="ads_menu_level_1">入门徽章</string>
    <string name="ads_menu_level_2">进阶徽章</string>
    <string name="ads_menu_level_3">达人徽章</string>
    <string name="ads_menu_level_4">专家徽章</string>
    <string name="ads_menu_level_5">教授徽章</string>
    <string name="ads_menu_reg_phone">手机号注册</string>
    <string name="ads_menu_reg_code">填写邀请码</string>
    <string name="ads_menu_save_code">保存二维码</string>

    <string name="mine_invite_hint">推广可永久增加每日可使用书币~</string>
    <string name="mine_invite_coin">今日剩余书币~</string>
    <string name="mine_invite_level">下一等级还差%s人</string>

    <string name="downloading_apk">正在后台下载...</string>
    <string name="not_find_sdcard">找不到存储路径</string>

</resources>
