<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#26292F">
    <include layout="@layout/base_title_layout"/>

    <RelativeLayout
        android:id="@+id/btn_ads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2F2F31"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/tv_invite_now"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:text="立即推广"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="#403122"
            android:background="@drawable/base_bg_invite_btn"/>
       <!-- <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/line_f1f1f1"/>-->
    </RelativeLayout>
    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/v_base_title"
        android:layout_above="@id/btn_ads"
        android:visibility="visible">

        <com.yyspbfq.filmplay.widget.sv.CustomScrollView
            android:id="@+id/sv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/my_tuiguang_yellowbg"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:padding="20dp"
                    android:visibility="visible">
                    <com.wei.wlib.widget.CircleImageView
                        android:id="@+id/civ"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        app:border_color="@color/bg_white"
                        app:border_width="1dp"
                        android:background="@mipmap/default_user_icon"/>

                    <ImageView
                        android:id="@+id/iv_er"
                        android:layout_width="85dp"
                        android:layout_height="43dp"
                        android:scaleType="centerInside"
                        android:src="@mipmap/icon_er"
                        android:layout_alignParentRight="true"/>

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/civ"
                        android:layout_toLeftOf="@id/iv_er"
                        android:text="嗯哼"
                        android:paddingLeft="8dp"
                        android:textStyle="bold"
                        android:textColor="@color/invite_card_text_color"
                        android:maxLines="1"
                        android:textSize="13sp"
                        android:ellipsize="end"/>
                    <TextView
                        android:id="@+id/tv_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/civ"
                        android:layout_toLeftOf="@id/iv_er"
                        android:text="@string/ads_invite_code"
                        android:paddingLeft="8dp"
                        android:textColor="@color/invite_card_text_color"
                        android:layout_below="@id/tv_name"
                        android:textSize="13sp"
                        android:layout_marginTop="5dp"
                        android:maxLines="1"
                        android:ellipsize="end"/>
                    <LinearLayout
                        android:id="@+id/v_v1"
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/civ"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="20dp">
                        <ImageView
                            android:id="@+id/iv_v1"
                            android:layout_width="44dp"
                            android:layout_height="44dp"
                            android:scaleType="centerInside"
                            android:layout_gravity="center_horizontal"
                            />
                        <TextView
                            android:id="@+id/tv_v1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="L1入门"
                            android:textSize="13sp"
                            android:textColor="@color/invite_card_text_color"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/v_v2"
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/civ"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="20dp"
                        android:layout_alignParentRight="true">
                        <ImageView
                            android:id="@+id/iv_v2"
                            android:layout_width="44dp"
                            android:layout_height="44dp"
                            android:scaleType="centerInside"
                            android:layout_gravity="center_horizontal"
                            />
                        <TextView
                            android:id="@+id/tv_v2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="L2进阶"
                            android:textSize="13sp"
                            android:textColor="@android:color/white"/>
                    </LinearLayout>

                    <ProgressBar
                        android:id="@+id/pb"
                        android:layout_width="match_parent"
                        android:layout_height="4dp"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_marginTop="36dp"
                        android:progressDrawable="@drawable/base_invite_progressbar"
                        android:layout_below="@id/civ"
                        android:layout_toRightOf="@id/v_v1"
                        android:layout_toLeftOf="@id/v_v2"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:progress="36"
                        />

                    <TextView
                        android:id="@+id/tv_up_hint"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:textColor="@color/text_white"
                        android:textSize="12sp"
                        android:text="距离下一等级还差2人"
                        android:layout_below="@id/pb"
                        android:layout_toRightOf="@id/v_v1"
                        android:layout_toLeftOf="@id/v_v2"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:gravity="center_horizontal"
                        android:layout_marginTop="8dp"
                        />
                </RelativeLayout>

                <!--书卷-->
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:background="@drawable/base_bg_white_radius"
                    android:layout_marginTop="3dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    >
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:gravity="center">
                        <TextView
                            android:id="@+id/tv_num_today"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="11"
                            android:textSize="28sp"
                            android:textStyle="bold"
                            android:textColor="@color/base_menu_title_color"
                            android:gravity="center_horizontal"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="今日可观影次数"
                            android:textSize="14sp"
                            android:textColor="@color/base_invite_normal_text"
                            android:gravity="center_horizontal"
                            android:layout_marginTop="5dp"/>
                    </LinearLayout>

                    <View
                        android:layout_width="1.5px"
                        android:layout_height="match_parent"
                        android:background="@color/line_ddd"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"/>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:gravity="center">
                        <TextView
                            android:id="@+id/tv_not_use"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="11"
                            android:textSize="28sp"
                            android:textStyle="bold"
                            android:textColor="@android:color/holo_red_light"
                            android:gravity="center_horizontal"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="剩余可观影次数"
                            android:textSize="14sp"
                            android:textColor="@color/base_invite_normal_text"
                            android:gravity="center_horizontal"
                            android:layout_marginTop="5dp"/>
                    </LinearLayout>
                </LinearLayout>

                <!--每日任务-->
                <LinearLayout
                    android:id="@+id/v_day"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/base_bg_white_radius"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:visibility="gone">
                    <TextView
                        android:id="@+id/tv_title_day"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ads_menu_day_task"
                        android:textColor="@color/base_menu_title_color"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"/>

                    <TextView
                        android:id="@+id/tv_remark_day"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@color/base_invite_normal_text"
                        android:textSize="14sp"
                        android:paddingTop="5dp"
                        android:layout_marginBottom="10dp"/>

                </LinearLayout>

                <!--推广任务-->
                <LinearLayout
                    android:id="@+id/v_invite_task"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/base_bg_white_radius"

                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:padding="15dp"
                    android:visibility="gone">
                    <TextView
                        android:id="@+id/tv_title_invite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ads_menu_ads_task"
                        android:textColor="@color/base_menu_title_color"
                        android:lineSpacingExtra="3dp"
                        android:lineSpacingMultiplier="1.1"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tv_ads_task_summary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ads_menu_ads_text"
                        android:textColor="@color/base_invite_normal_text"
                        android:textSize="14sp"
                        android:lineSpacingExtra="2.4dp"
                        android:lineSpacingMultiplier="1.06"
                        android:paddingTop="5dp"
                        android:paddingBottom="10dp"/>
                </LinearLayout>

                <!--福利任务-->
                <LinearLayout
                    android:id="@+id/v_fuli"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/base_bg_white_radius"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginBottom="15dp"
                    android:paddingTop="15dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="20dp"
                    android:visibility="gone">
                    <TextView
                        android:id="@+id/tv_title_fuli"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ads_menu_fuli_task"
                        android:textColor="@color/base_menu_title_color"
                        android:lineSpacingExtra="3dp"
                        android:lineSpacingMultiplier="1.1"
                        android:textSize="16sp"
                        android:textStyle="bold"/>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="@color/invite_time_line_color"
                            android:layout_marginTop="30dp"
                            android:layout_marginLeft="15dp"/>
                        <LinearLayout
                            android:id="@+id/v_fuli_body"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="-10dp">

                        </LinearLayout>

                    </LinearLayout>


                </LinearLayout>
            </LinearLayout>
        </com.yyspbfq.filmplay.widget.sv.CustomScrollView>

    </RelativeLayout>

</RelativeLayout>